<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wellcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/image_emoji2"
            android:layout_width="356dp"
            android:layout_height="192dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/just_emoji_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wellcome_text"
            app:srcCompat="@drawable/download" />

        <TextView
            android:id="@+id/wellcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:gravity="center"
            android:text="@string/wellcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/yes"
            app:layout_constraintBottom_toBottomOf="@+id/no_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="52dp"
            android:text="@string/no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_text" />

        <TextView
            android:id="@+id/question_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:gravity="center"
            android:text="@string/do_you_have_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_emoji2" />

        <TextView
            android:id="@+id/oops_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rammetto_one"
            android:padding="10dp"
            android:text="@string/oops_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no_button"
            app:layout_constraintVertical_bias="0.109"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>

